objects/LCRM_Opty_Case_Brand_Map__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Case_Brand__c</fullName>
        <label>Case Brand</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Issue__c</fullName>
        <label>Case Issue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Reason__c</fullName>
        <label>Case Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>LCRM Opty&amp;Case Brand Map</label>
</CustomObject>